# esp-lifecycle

./: CHANGELOG.md  CMakeLists.txt  README.md  library.json  library.properties
.github/workflows/: ci.yml
examples/basic-startup/: basic-startup.ino
examples/deferred-readiness/: deferred-readiness.ino
examples/dependency-closure/: dependency-closure.ino
examples/failure-policy/: failure-policy.ino
examples/parallel-waves/: parallel-waves.ino
examples/reload-burst/: reload-burst.ino
examples/scoped-reload/: scoped-reload.ino
src/: ESPLifecycle.cpp  ESPLifecycle.h  reload.cpp  runtime.cpp  snapshot.cpp  validation.cpp
src/esp_lifecycle/: lifecycle.h
src/internal/: GraphTypes.h
test/: CMakeLists.txt
